--- a/app.json
+++ b/app.json
@@ -20,7 +20,8 @@
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
       },
-      "edgeToEdgeEnabled": true
+      "edgeToEdgeEnabled": true,
+      "package": "com.sophie_soe.canvasapp"
     },
     "web": {
       "favicon": "./assets/favicon.png"
