--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react-native": "0.79.4",
     "@shopify/react-native-skia": "v2.0.0-next.4",
     "react-native-gesture-handler": "~2.24.0",
-    "react-native-reanimated": "~3.17.4"
+    "react-native-reanimated": "~3.17.4",
+    "expo-video": "~2.2.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
