--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "@shopify/react-native-skia": "v2.0.0-next.4",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-reanimated": "~3.17.4",
-    "expo-video": "~2.2.2"
+    "expo-video": "~2.2.2",
+    "expo-screen-orientation": "~8.1.7"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
